--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,6 @@ deprecated/
 # Vim files
 *.sw[mnop]
 
-
-# Data Files
-*.zip
-*.tar.gz
-
 # .pyenv files
 .python-version
 
@@ -64,8 +59,9 @@ __pycache__/
 *.kmz
 *.jpg
 *.wld
-notebooks/*.geojson
-notebooks/*.json
+notebooks/**/*.geojson
+notebooks/**/*.json
+s1_frame_enumerator/**/*.geojson
 
 # Ignore logs
 *.log
