--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,6 @@ s1_frame_enumerator/**/*.geojson
 
 # Ignore site specific notebooks
 notebooks/Submitting_to_Hyp3-*.ipynb
+
+# Ignore data temporarily
+s1_frame_enumerator/data/
