--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,12 +1,15 @@
-name: Static analysis
+name: Static Analysis (Flake8/Ruff)
 
 on: push
 
 jobs:
   call-flake8-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-flake8.yml@main
+    uses: ASFHyP3/actions/.github/workflows/reusable-flake8.yml@v0.8.3
     with:
       local_package_names: s1_frame_enumerator
 
   call-secrets-analysis-workflow:
-    uses: ASFHyP3/actions/.github/workflows/reusable-secrets-analysis.yml@main
+    uses: ASFHyP3/actions/.github/workflows/reusable-secrets-analysis.yml@v0.8.3
+  
+  call-ruff-workflow:
+    uses: ASFHyP3/actions/.github/workflows/reusable-ruff.yml@v0.9.0
