--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -12,15 +12,5 @@ on:
       - dev
 
 jobs:
-  changelog-udated:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Changelog check
-        uses: Zomzog/changelog-checker@v1.3.0
-        with:
-          fileName: CHANGELOG.md
-          noChangelogLabel: bumpless
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  call-changelog-check-workflow:
+    uses: ASFHyP3/actions/.github/workflows/reusable-changelog-check.yml@v0.11.1
