--- a/environment.yml
+++ b/environment.yml
@@ -5,10 +5,6 @@ dependencies:
   - python>=3.11 # required for shapely 2.0.0
   - pip
   # For packaging, and testing
-  - flake8
-  - flake8-import-order
-  - flake8-blind-except
-  - flake8-builtins
   - ipympl
   - setuptools
   - setuptools_scm
@@ -31,3 +27,4 @@ dependencies:
   - rasterio
   - asf_search
   - hyp3_sdk
+  - ruff
