--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,7 @@
-name: Test
+name: Pytest 
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -15,19 +16,25 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
+      fail-fast: false
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
-      - uses: mamba-org/provision-with-micromamba@main
+      - uses: mamba-org/setup-micromamba@v2
         with:
-          environment-name: s1-frame-enumerator
+          environment-name: dist-s1-env
           environment-file: environment.yml
-          extra-specs: |
+          create-args: >-
             python=${{ matrix.python-version }}
+
+      - name: Install package
+        shell: bash -l {0}
+        run: |
+          python -m pip install --no-deps .
+
       - name: Pytest in conda environment
         shell: bash -l {0}
         run: |
-          python -m pip install .
           pytest .
