--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,13 @@ classifiers = [
     'Programming Language :: Python :: 3',
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
+    'Programming Language :: Python :: 3.13',
 ]
 
 dynamic = ['version', 'readme']
 
 dependencies = [
     'geopandas',
-    'rasterio',
     'pandas',
     'asf_search',
     'tqdm',
